src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

/* Adjust layout for mobile and desktop */
header {
  padding: 10px 0;
  position: fixed;
  width: 100%;
  z-index: 10;
  top: 0;
  background: #e0f2ff; /* Ensure header background is visible */
}

main {
  margin-top: 80px; /* Adjust this based on header height */
}

/* Mobile specific styling */
@media (max-width: 768px) {
  header {
    padding: 5px 0;
    height: auto; /* Reduce the height for mobile */
  }

  main {
    margin-top: 60px; /* Reduce margin for mobile */
  }
}

/* Desktop specific styling */
@media (min-width: 769px) {
  header {
    height: 60px; /* Regular desktop height */
  }

  main {
    margin-top: 60px; /* Adjust accordingly */
  }
}

